# Final-year-project

./: Attendence_system_training_ajeet1.ipynb  Bhaiya.py  Face detect 1.py  FaceNet_complete_deployment.ipynb  README.md  advanced_outputs.ipynb  soln.py
Members-Log/: Matlab.md  Report_of_work.md  Research papers.md  advanced_outputs.ipynb
Report & presentation/: Final year project presentation 2.pptx
Software/Source Code/: Frame_Extract.py  Input Pre-processing.py  Snapshot_through_colab.ipynb  new.py
Tools and frameworks/: Tools for local host.md  Tools for local host.text
images/Annotation/: image1.xml  image10.xml  image100.xml  image101.xml  image103.xml  image104.xml  image105.xml  image106.xml  image108.xml  image113.xml  image114.xml  image115.xml  image12.xml  image125.xml  image126.xml  image129.xml  image13.xml  image130.xml  image133.xml  image134.xml  image135.xml  image136.xml  image137.xml  image138.xml  image14.xml  image143.xml  image144.xml  image146.xml  image147.xml  image148.xml  image151.xml  image152.xml  image153.xml  image154.xml  image160.xml  image164.xml  image166.xml  image168.xml  image169.xml  image17.xml  (+88 more)
images/test/: image107.xml  image109.xml  image110.xml  image111.xml  image112.xml  image116.xml  image117.xml  image118.xml  image119.xml  image120.xml  image121.xml  image122.xml  image123.xml  image124.xml  image127.xml  image128.xml  image131.xml  image132.xml  image139.xml  image140.xml  image141.xml  image142.xml  image145.xml  image149.xml  image150.xml  image155.xml  image156.xml  image157.xml  image158.xml  image159.xml  image16.xml  image161.xml  image162.xml  image163.xml  image165.xml  image167.xml  image170.xml  image172.xml  image174.xml  image178.xml  (+75 more)
images/train/: image102.xml  image11.xml  image15.xml  image193.xml  image195.xml  image196.xml  image199.xml  image3.xml  image5.xml  image6.xml  image7.xml  image8.xml  image91.xml  image92.xml  image94.xml  image96.xml  image97.xml  image99.xml
time-space-analyser/: CMakeLists.txt  README.md
time-space-analyser/examples/: Inference1.py  ts_example.c
time-space-analyser/include/tsanalyser/: tsanalyser.h
time-space-analyser/scripts/: build-c.sh  build-py.sh
time-space-analyser/src/: tsanalyser.c
time-space-analyser/tests/: test.c  test.py
time-space-analyser/wrappers/: setup.py.in  tsanalyser.i
versions/First1/: Driver code.py  requirements.txt
versions/keras_model/: Testing_keras.h5  face_detection.py  face_detection_webcam.py  model_testing_image.py  model_testing_webcam.py  test.ipynb  trying_error_handle.py
